2014-04-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/mod.c (mod_inv): Use MAX_GCD_STEPS_BN256.
	Return failure or success.
	* src/jpc.c (jpc_to_ac): Use mod_inv.
	* src/modp256k1.c (modp256k1_inv): Remove.
	* src/modp256r1.c (modp256r1_inv): Remove.

2014-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (algorithm_attr_ed25519): It's OID only.

2014-04-03  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_sign_25519): Change type of OUT.
	* src/openpgp.c (cmd_internal_authenticate): Have a buffer.

	* src/flash.c (flash_init): Fix key address finder.

2014-04-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (proc_key_import): Handle EdDSA.
	(algorithm_attr_ed25519): Fix OID and add ID for SHA512.

2014-04-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_compute_public_25519): New.

	* src/openpgp-do.c (algorithm_attr_ed25519): New.
	(gpg_do_write_prvkey, proc_key_import, gpg_do_public_key): Add
	EdDSA handling.

2014-03-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_sign_25519): Rename and API change.

	* src/openpgp-do.c (gpg_do_load_prvkey, gpg_do_delete_prvkey)
	(gpg_do_write_prvkey, gpg_do_public_key, gpg_do_keygen): Follow
	the change of PRVKEY_DATA and KEY_DATA.

	* src/flash.c (key_available_at): New.
	(flash_init): Initilize KD.

	* src/gnuk.h (struct prvkey_data): Remove member KEY_ADDR.
	(struct key_data): Addd member KEY_ADDR.

	* src/openpgp-do.c (gpg_do_keygen): Bug fix.  Reset the signature
	counter when new key is generated.

	* src/flash.c (flash_key_alloc): Change API, supply KK.

2014-03-29  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (point_double, point_add): Rename.
	(mod25519_reduce): New.

2014-03-28  Niibe Yutaka  <gniibe@fsij.org>

	* misc/t-eddsa.c (main): Update for new API of eddsa_25519.

	* src/ecc-edwards.c (compute_kG_25519): Tune for 252-bit.
	(eddsa_25519): Public key should be provided by caller.
	(eddsa_public_key_25519): New.
